--- a/css/style.css
+++ b/css/style.css
@@ -331,3 +331,108 @@ h2 {
 .hidden {
   opacity: 0;
 }
+
+/* Responsive */
+
+@media only screen and (max-width: 920px) {
+  nav {
+    padding: 0;
+  }
+
+  .app {
+    grid-template-columns: 55%;
+  }
+
+  .summary {
+    flex-wrap: wrap;
+  }
+
+  .operation {
+    padding: 3rem 3rem;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  nav {
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .logo {
+    margin: 10px 0;
+  }
+
+  .app {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+  }
+
+  .balance__label {
+    font-size: 1.7rem;
+  }
+
+  .balance__date {
+    font-size: 1.4rem;
+  }
+
+  .balance__value {
+    font-size: 3.2rem;
+  }
+
+  .movements {
+    height: 50vh;
+    width: 90vw;
+  }
+
+  .movements__date {
+    margin-right: 10px;
+  }
+
+  .movements__row {
+    justify-content: space-between;
+    padding: 2rem 3rem;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .summary {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .operation {
+    padding: 3rem 2rem;
+  }
+
+  .operation--loan,
+  .operation--close {
+    margin-top: 0;
+  }
+
+  .form.form--loan {
+    grid-template-columns: 3.5fr 1fr 1.5fr;
+  }
+
+  .logout-timer {
+    margin-bottom: 1rem;
+    text-align: center;
+    margin-top: 0;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  .balance {
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+  }
+
+  .balance__value {
+    margin-top: 1rem;
+  }
+}
